# agent-harness

.github/workflows/: deploy.yml
agent-harness/: 00-master-summary.html  00-master-summary.md  01-new-sdlc-vibe-coding.html  01-new-sdlc-vibe-coding.md  02-agent-harness-engineering.html  02-agent-harness-engineering.md  03-whitepaper-new-sdlc-vibe-coding.html  03-whitepaper-new-sdlc-vibe-coding.md  04-agentic-code-review.html  04-agentic-code-review.md  05-adk-coding-with-ai-cli.html  05-adk-coding-with-ai-cli.md  06-claude-code-large-codebases.html  06-claude-code-large-codebases.md  new-sdlc-summary.html  presentation.html  questions.html
agent-harness/harness/: .gitignore  pyproject.toml
agent-harness/harness/.claude/agents/: implementer.md
agent-harness/harness/.claude/hooks/: deny-tests-dir.sh
agent-harness/harness/src/agent_harness/: __init__.py  permissions.py  runner.py
agent-harness/harness/tests/: test_permissions.py
agent-harness/specs/: harness-spec.md
