[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryan Walker", email = "ryanwalker7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.2.110",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
